[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Reywak.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://styles/Pause_buttom.tres" type="StyleBox" id=2]
[ext_resource path="res://styles/button_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/screens/Pause.gd" type="Script" id=4]
[ext_resource path="res://styles/Pause_buttom_hover.tres" type="StyleBox" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Pause" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1029.0
margin_bottom = 603.0

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
margin_right = 1026.0
margin_bottom = 610.0
color = Color( 0.231373, 0.466667, 0.560784, 0.478431 )

[node name="Label" type="Label" parent="TextureRect"]
margin_left = 361.0
margin_top = 135.0
margin_right = 643.0
margin_bottom = 235.0
theme = SubResource( 2 )
text = "Pausa"

[node name="Timer" type="Timer" parent="."]

[node name="Continue" type="Button" parent="."]
margin_left = 409.0
margin_top = 276.0
margin_right = 609.0
margin_bottom = 323.0
theme = ExtResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Continuar"

[node name="Menu" type="Button" parent="."]
margin_left = 410.0
margin_top = 343.0
margin_right = 610.0
margin_bottom = 390.0
theme = ExtResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Men√∫"

[node name="Salir" type="Button" parent="."]
margin_left = 409.0
margin_top = 409.0
margin_right = 611.0
margin_bottom = 455.0
theme = ExtResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Salir"

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_Salir_pressed"]
